# matemancpp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  callgrind.out.44328  callgrind.out.44440  completed_files.txt  matemancpp  pgn_errors.txt  run_2_threads_001.txt  run_4_threads_001.txt  run_8_threads_001.txt
include/: cli.hpp  fen.hpp  game.hpp  master_tablebase.hpp  move_generation.hpp  options.hpp  parse_pgn.hpp  pgn_game.hpp  position.hpp  read_pgn_data.hpp  squares.hpp  tablebase.hpp  threadpool.hpp  util.hpp  zobrist.hpp
include/engine/: engine.hpp  evaluation.hpp  search.hpp
include/process_pgn/: pgn_game.hpp  read_pgn_data.hpp
include/representation/: color.hpp  fen.hpp  move.hpp  notation.hpp  offsets.hpp  pieces.hpp  position.hpp  squares.hpp
include/tablebase/: master_tablebase.hpp  move.hpp  move_edge.hpp  movekey.hpp  opening_tablebase.hpp  persistence.hpp  tablebase.hpp  zobrist.hpp
include/threadpool/: threadpool.hpp
logs/: basic-log.txt
scripts/: download_pgn.py
src/: CMakeLists.txt  cli.cpp  fen.cpp  main.cpp  move_generation.cpp  options.cpp  parse_pgn.cpp  pgn_game.cpp  pgn_position.cpp  position.cpp  read_pgn_data.cpp  tablebase.cpp  threadpool.cpp  util.cpp  zobrist.cpp
src/engine/: engine.cpp  evaluation.cpp  search.cpp
src/process_pgn/: pgn_game.cpp  pgn_position.cpp  read_pgn_data.cpp
src/representation/: fen.cpp  notation.cpp  position.cpp
src/tablebase/: move.cpp  move_edge.cpp  movekey.cpp  opening_tablebase.cpp  persistence.cpp  tablebase.cpp  zobrist.cpp
src/test/: launcher.cpp
src/threadpool/: threadpool.cpp
tablebase/: test.tb
tests/: CMakeLists.txt  Test  engine.cpp  evaluation.cpp  fen.cpp  move.cpp  move_generation.cpp  position.cpp  read_pgn_data.cpp  search.cpp  test.cpp
tests/database/pgn/test_01/: file_001.pgn
tests/database/pgn/test_02a/: file_001.pgn
tests/database/pgn/test_02b/: file_001.pgn
tests/database/pgn/test_03/: file_001.pgn
tests/database/pgn/test_04/: Adams.pgn  Akobian.pgn  Akopian.pgn  Bacrot.pgn  Bareev.pgn  Benjamin.pgn
tests/database/pgn/test_05/: file_001.pgn
